# cpp_python_embeded

python_base/: CMakeLists.txt
python_base/interface/: PythonBase.h  PythonBaseDefaultAllocator.h  PythonBaseDefs.h  PythonBaseDllLoader.h  SimpleString.h  SimpleVector.h
python_base/src/: PyBindHelper.cpp  PyBindHelper.hpp  PyInterpreterManager.cpp  PyInterpreterManager.hpp  PybindModule.cpp  PythonBaseImpl.cpp  PythonBaseImpl.h  PythonBaseLogger.h  PythonBaseUIViewLogger.h
